<resources>
    <string name="app_name">MedAssistant</string>
    <string name="action_settings">Settings</string>
    <string name="medicine_name">Medicinename: </string>
    <string name="active_substance">Active Substance: </string>
    <string name="start_date">Startdate: </string>
    <string name="end_date">Enddate: </string>
    <string name="timeOfTaking">Time of taking: </string>

    <string name="save">SAVE</string>
    <string name="editItem">Edit</string>
    <string name="deleteItem">Delete</string>

    <string name="detials_medicine_name">Medicinename</string>
    <string name="details_acitve_substance">Active Substance</string>
    <string name="med_type">Select MedType</string>
    <string name="pharmaceutical">Pharmaceutical</string>
    <string name="vaccine">Vaccine</string>
    <string name="details_start_date">Startdate (dd.mm.yyyy)</string>
    <string name="details_end_date">Enddate (dd.mm.yyyy)</string>
    <string name="details_time_of_taking">Time of taking (hh:mm)</string>
    <string name="taken">Taken</string>
    <string name="etc">...</string>
    <string name="nameError">Name is required</string>
    <string name="endDateError">Enddate is required</string>
    <string name="timeOfTakingError">Time of taking is required</string>

    <string name="options"> + Options</string>
    <string name="details_periodicityInDays">Periodicity in days</string>
    <string name="periodicityInDaysError">Periodicity in days is required</string>
    <string name="details_reminderTime">Reminder Time</string>
    <string name="details_reminderDate">Reminder Date</string>
    <string name="periodicityInDays">Periodicity in days</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="userChangeText">Change User</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="addUserFirstnameLabel">Firstname:</string>
    <string name="addUserLastnameLabel">Lastname:</string>
    <string name="title_activity_notification_screen">NotificationScreen</string>
    <string name="notification_later">Later</string>
    <string name="userName">Username</string>
    <string name="notification_title1">You have to take </string>
    <string name="notification_title2"> now.</string>
    <string name="notification_content">Choose Later or Taken</string>
    <string name="hint_notes">Notes</string>
    <string name="note">Note</string>
    <string name="periodicityInDaysErrorNotNegative">Periodicity in days is a positive number.</string>

</resources>
