<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MedicineDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <view
                android:id="@+id/MedTypeTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                class="android.support.design.widget.TextInputLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:layout_weight="1"
                    android:text="@string/med_type"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radioGroup">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButtonPharmaceutical"
                        android:layout_weight="1"
                        android:text="@string/pharmaceutical"/>

                    <RadioButton
                        android:text="@string/vaccine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButtonVaccine"
                        android:layout_weight="1"/>
                </RadioGroup>
            </view>

            <view
                android:id="@+id/medicinenameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                class="android.support.design.widget.TextInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextName"
                    android:hint="@string/detials_medicine_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />
            </view>


            <view
                android:id="@+id/activeSubstanceTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                class="android.support.design.widget.TextInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editTextActiveSubstance"
                    android:hint="@string/details_acitve_substance"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />
            </view>


            <view
                android:id="@+id/periodicityInDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                class="android.support.design.widget.TextInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/editTextPeriodicityInDays"
                    android:hint="@string/details_periodicityInDays"
                    android:imeOptions="actionNext"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/details_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/options"/>

            </view>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="4"
                android:visibility="gone"
                android:id="@+id/startDateTextInputLayout">

                <view
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    class="android.support.design.widget.TextInputLayout"
                    android:layout_weight="3">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextStartDate"
                        android:hint="@string/details_start_date"
                        android:imeOptions="actionNext"
                        android:layout_weight="3"
                        android:enabled="false"
                        android:inputType="date"/>
                </view>

                <Button
                    android:text="@string/etc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonStartDate"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="4"
                android:id="@+id/endDateTextInputLayout"
                android:visibility="gone">

                <view
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    class="android.support.design.widget.TextInputLayout"
                    android:layout_weight="3">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextEndDate"
                        android:hint="@string/details_end_date"
                        android:imeOptions="actionNext"
                        android:layout_weight="3"
                        android:enabled="false"
                        android:inputType="date" />
                </view>

                <Button
                    android:text="@string/etc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/buttonEndDate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="4"
                android:id="@+id/timeOfTakingTextInputLayout">

                <view
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    class="android.support.design.widget.TextInputLayout"
                    android:layout_weight="3">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextTimeOfTaking"
                        android:hint="@string/details_time_of_taking"
                        android:imeOptions="actionNext"
                        android:layout_weight="3"
                        android:enabled="false"
                        android:inputType="time" />

                </view>
                <Button
                    android:text="@string/etc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/buttonTime" />
            </LinearLayout>

            <view
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                class="android.support.design.widget.TextInputLayout"
                android:id="@+id/notesTextInputLayout">
                <EditText
                    android:id="@+id/editTextNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:scrollHorizontally="false"
                    android:hint="@string/hint_notes"
                    />
            </view>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/buttonSave"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
