<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="at.htl.medassistant.AddUserActivity"
    tools:showIn="@layout/activity_add_user">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <view
                android:id="@+id/lastnameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                class="android.support.design.widget.TextInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextUserLastName"
                    android:hint="@string/addUserLastnameLabel"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />
            </view>
            <view
                android:id="@+id/firstnameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                class="android.support.design.widget.TextInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextUserFirstName"
                    android:hint="@string/addUserFirstnameLabel"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />
            </view>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/buttonSaveUser"/>

        </LinearLayout>
    </ScrollView>


</FrameLayout>
